--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ analytics:
 # Site Author
 author:
   name             : "Pilz"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : # "/assets/images/bio-photo.jpg"
   bio              : "Yo wassup"
   location         : "Somewhere"
   email            :
@@ -134,7 +134,7 @@ author:
       url: "https://github.com/pilz0"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/pilz1312"
+      url: "https://instagram.com/pilz1312"
 
 # Site Footer
 footer:
@@ -316,7 +316,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: # true
       share: true
